UCF-APR2.4/ftr main/force-app/main/default/objects/CLM_Environment_Settings__c/CLM_Environment_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CLM Environment Settings</description>
    <label>CLM_Environment_Settings</label>
</CustomObject>