UCF-APR2.4/ftr main/force-app/main/default/objects/CLM_Environment_Settings__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <description>Sub Type</description>
    <label>SubType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>