UCF-APR2.4/ftr main/force-app/main/default/objects/CLM_Environment_Settings__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type</description>
    <label>Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>