UCF-APR2.4/ftr main/force-app/main/default/objects/CLM_Environment_Settings__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value</description>
    <label>Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>